# mitro

./: README.md
kinect_test/: CMakeLists.txt  manifest.xml
kinect_test/cfg/: kinect_test.cfg
kinect_test/launch/: kinect.launch  kinect_frames.launch  test.launch
kinect_test/src/: filter.cpp  voxel_grid.cpp
mitro/: rosdep.yaml  stack.xml
mitro/mitro/: CMakeLists.txt  package.xml
mitro/mitro_augmentation/: camera
mitro/mitro_base_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
mitro/mitro_bringup/: CMakeLists.txt  mainpage.dox  manifest.xml  mitro-rviz.rviz  mitro_bringup.sh  mitro_bringup_base.sh  mitro_bringup_core.sh  mitro_bringup_laptop.sh  package.xml
mitro/mitro_calibration/: manifest.xml
mitro/mitro_description/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mitro/mitro_diagnostics/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
mitro/mitro_diagnostics/config/: mitro_diagnostics.yaml
mitro/mitro_diagnostics/launch/: sysinfo.launch  sysinfo_laptop.launch
mitro/mitro_diagnostics/msg/: BatteryStatus.msg  NetworkStatus.msg  SysInfo.msg  SystemStatus.msg
mitro/mitro_diagnostics/scripts/: sysinfo.py  test_mitro_base.py
mitro/mitro_diagnostics/src/: sysinfo.py
mitro/mitro_diagnostics/src/mitro_testing/: process.py  ros.py  video.py
mitro/mitro_kinect/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
mitro/mitro_msgs/: mainpage.dox  manifest.xml
mitro/mitro_multicam/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  start.sh
mitro/mitro_odom/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mitro/mitro_sonar/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mitro/mitro_testing/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
mitro/mitro_webcontrol/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  start.sh
mitro/twist_mixer/: CMakeLists.txt  manifest.xml  package.xml
mitro_apps/: stack.xml
mitro_apps/assisted_drive/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mitro_apps/face_tracker/: mainpage.dox  manifest.xml
mitro_apps/mitro_apps/: CMakeLists.txt  package.xml
mitro_apps/mitro_dashboard/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
mitro_apps/mitro_dashboard/plugins/: plugin.xml
mitro_apps/mitro_dashboard/scripts/: mitro_dashboard.py
mitro_apps/mitro_dashboard/src/mitro_dashboard/: assisted_drive_widget.py  battery_state_control.py  battery_widget.py  clear_costmap_widget.py  cpu_widget.py  dashboard.py  home_widget.py  navigation_widget.py  relais_widget.py  runstop_widget.py  status_control.py  wifi_widget.py
mitro_apps/mitro_navigation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mitro_apps/mitro_shepherd/: CMakeLists.txt  package.xml
mitro_apps/mitro_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
mitro_apps/mitro_telepresence/: CMakeLists.txt  manifest.xml
mitro_apps/people_tracker/: mainpage.dox  manifest.xml
mitro_client/BobConnect/: runserver.sh
mitro_client/multi_cam/: Makefile
mitro_client/multicam/: Makefile
mitro_client/webcontrol/: Makefile  start.sh
mitro_viz/: mitro.vcg  stack.xml
mitro_viz/mitro_status/: mainpage.dox  (+1 more)
skype4ros/: mainpage.dox  manifest.xml  pythonTest.py
tele_bridge/: mainpage.dox  manifest.xml
tele_controllers/: mainpage.dox  manifest.xml
tele_description/: mainpage.dox  manifest.xml
tele_imu/: CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
tele_msgs/: mainpage.dox  manifest.xml
tele_odom/: CMakeLists.txt  mainpage.dox  manifest.xml
tele_remote/: app.py  mainpage.dox  manifest.xml
tele_robot/: mainpage.dox  manifest.xml
(+397 files in other folders)
