<?xml version="1.0"?>
<package>
    <name>mitro_diagnostics</name>
    <version>1.0.0</version>
    <description>Diagnostics tools for MITRO</description>

    <maintainer email="daan.bloembergen@gmail.com">Daan Bloembergen</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>diagnostic_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>diagnostic_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
</package>
