<?xml version="1.0"?>
<package>
    <name>mitro_dashboard</name>
    <version>1.0.0</version>
    <description>Dashboard GUI for MITRO, based on rqt_kobuki_dashboard</description>

    <maintainer email="daan.bloembergen@gmail.com">Daan Bloembergen</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>rqt_robot_dashboard</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>rqt_robot_dashboard</run_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugins/plugin.xml"/>
    </export>

</package>
